<resources>
    <string name="app_name">chevron-stationFinder</string>
    <string name="map_logo">logo_description</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="find_stations_text">Find Stations :</string>
    <string name="near_by_button_text">Near by</string>
    <string name="near_an_address_button_text">Near an address</string>
    <string name="that_have_button_text">That have....</string>
    <string name="search_bar_text">Search</string>
    <string name="search_icon_description">searchIcon</string>
    <string name="clear_button_description">Clear Button</string>
    <string name="distance_dropdown_text">Within</string>
    <string name="show_locations_with_text">Show locations with:</string>
    <string name="tap_to_pay">Tap to Pay</string>
    <string name="store">Store</string>
    <string name="grocery_rewards">Grocery Rewards</string>
    <string name="extramile">ExtraMile</string>
    <string name="diesel">Diesel</string>
    <string name="reset_button_text">Reset all options</string>
    <string name="results_button_text">Show results</string>
    <string name="car_wash">Car Wash</string>
    <string name="close_button_description">close_button</string>
    <string name="directions_button_text">Directions</string>
    <string name="feedback_button_text">Feedback</string>
    <string name="stations_near_text">Stations near :</string>
    <string name="options_button_text">Options</string>
    <string name="amenities_button_text">Amenities</string>
    <string name="details_button_text">Details</string>
    <string name="logo_description">logo</string>
    <string name="empty_list_text">We could\'t find any stations near this location.</string>
    <string name="current_location_button_text">Current Location</string>
    <string-array name="distance_array">
        <item>1 mile</item>
        <item>3 miles</item>
        <item>5 miles</item>
        <item>10 miles</item>
        <item>15 miles</item>
        <item>20 miles</item>
        <item>25 miles</item>
        <item>30 miles</item>
        <item>35 miles</item>
    </string-array>
</resources>
