<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/station_finder_detail_rounded_bg"
    tools:context=".fragments.SearchThatHasFragment">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/find_stations_text"
        android:textColor="@color/text_dark_grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/closeBtn"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/close_button_description"
        android:src="@drawable/ic_close_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/distance_dropdown_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:spinnerMode="dialog"
        android:theme="@style/Spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/show_locations_with_text"
        android:textColor="@color/text_dark_grey"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <ToggleButton
        android:id="@+id/carWash"
        android:layout_width="98dp"
        android:layout_height="92dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/toggle_bg"
        android:drawableTop="@drawable/filter_icon_car_wash_black"
        android:fontFamily="@font/roboto"
        android:padding="8dp"
        android:textAllCaps="false"
        android:textOff="@string/car_wash"
        android:textOn="@string/car_wash"
        app:layout_constraintEnd_toStartOf="@+id/tapToPay"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ToggleButton
        android:id="@+id/tapToPay"
        android:layout_width="98dp"
        android:layout_height="92dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/toggle_bg"
        android:drawableTop="@drawable/filter_icon_tap_to_pay_black"
        android:fontFamily="@font/roboto"
        android:padding="8dp"
        android:textAllCaps="false"
        android:textOff="@string/tap_to_pay"
        android:textOn="@string/tap_to_pay"
        app:layout_constraintEnd_toStartOf="@+id/store"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/carWash"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ToggleButton
        android:id="@+id/store"
        android:layout_width="98dp"
        android:layout_height="92dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/toggle_bg"
        android:drawableTop="@drawable/filter_icon_store_black"
        android:fontFamily="@font/roboto"
        android:padding="8dp"
        android:textAllCaps="false"
        android:textOff="@string/store"
        android:textOn="@string/store"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tapToPay"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ToggleButton
        android:id="@+id/groceryRewards"
        android:layout_width="98dp"
        android:layout_height="92dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/toggle_bg"
        android:drawableTop="@drawable/filter_icon_grocery_rewards_black"
        android:fontFamily="@font/roboto"
        android:padding="8dp"
        android:textAllCaps="false"
        android:textOff="@string/grocery_rewards"
        android:textOn="@string/grocery_rewards"
        app:layout_constraintEnd_toStartOf="@+id/extraMile"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carWash" />

    <ToggleButton
        android:id="@+id/extraMile"
        android:layout_width="98dp"
        android:layout_height="92dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/toggle_bg"
        android:drawableTop="@drawable/filter_icon_extramile_black"
        android:fontFamily="@font/roboto"
        android:padding="8dp"
        android:textAllCaps="false"
        android:textOff="@string/extramile"
        android:textOn="@string/extramile"
        app:layout_constraintEnd_toStartOf="@+id/diesel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/groceryRewards"
        app:layout_constraintTop_toBottomOf="@+id/tapToPay" />

    <ToggleButton
        android:id="@+id/diesel"
        android:layout_width="98dp"
        android:layout_height="92dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/toggle_bg"
        android:drawableTop="@drawable/filter_icon_diesel_black"
        android:fontFamily="@font/roboto"
        android:padding="8dp"
        android:textAllCaps="false"
        android:textOff="@string/diesel"
        android:textOn="@string/diesel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/extraMile"
        app:layout_constraintTop_toBottomOf="@+id/store" />

    <View
        android:id="@+id/divider5"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/extraMile" />

    <TextView
        android:id="@+id/resetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/reset_button_text"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/resultsBtn"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider5"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/resultsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contextClickable="true"
        android:text="@string/results_button_text"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/resetBtn"
        app:layout_constraintTop_toBottomOf="@+id/divider5"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>