<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="10dp"
    android:animateLayoutChanges="true"
    android:background="@drawable/dialog_rounded_white_bg"
    android:elevation="2dp"
    android:visibility="visible">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/logo_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/distance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/techron_logo_lockup" />

    <TextView
        android:id="@+id/stationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textColor="@android:color/black"
        android:typeface="normal"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textColor="@color/text_lighter_grey"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/stationName" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/icon_distance"
        android:drawablePadding="2dp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/text_lighter_grey"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/amenitiesLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btnDetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/distance">

        <TextView
            android:id="@+id/extraMile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/extramile"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/tapPay"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tapPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/tap_to_pay"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/carWash"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/extraMile"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/carWash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/car_wash"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tapPay"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/diesel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/diesel"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/rewards"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/extraMile" />

        <TextView
            android:id="@+id/rewards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/grocery_rewards"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/store"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/diesel"
            app:layout_constraintTop_toBottomOf="@+id/tapPay" />

        <TextView
            android:id="@+id/store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/store"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/rewards"
            app:layout_constraintTop_toBottomOf="@+id/carWash" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/btnAmenities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:clickable="true"
        android:contextClickable="true"
        android:fontFamily="@font/roboto"
        android:text="@string/amenities_button_text"
        android:textColor="@color/text_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnDetails"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/distance" />

    <TextView
        android:id="@+id/btnDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contextClickable="true"
        android:fontFamily="@font/roboto"
        android:text="@string/details_button_text"
        android:textColor="@color/text_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnDirections"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnAmenities" />

    <TextView
        android:id="@+id/btnDirections"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contextClickable="true"
        android:fontFamily="@font/roboto"
        android:text="@string/directions_button_text"
        android:textColor="@color/text_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnDetails" />

</android.support.constraint.ConstraintLayout>
