<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".fragments.SearchFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto"
        android:text="@string/find_stations_text"
        android:textColor="@color/text_grey"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/finder_button_pressed"
        android:drawableStart="@drawable/icon_near_by"
        android:drawablePadding="16dp"
        android:elevation="10dp"
        android:fontFamily="@font/roboto"
        android:gravity="start|center"
        android:padding="0dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/near_by_button_text"
        android:textAllCaps="false"
        android:textColor="@color/text_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/finder_button_pressed"
        android:drawableStart="@drawable/icon_near_address"
        android:drawablePadding="16dp"
        android:elevation="10dp"
        android:fontFamily="@font/roboto"
        android:gravity="start|center"
        android:padding="0dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/near_an_address_button_text"
        android:textAllCaps="false"
        android:textColor="@color/text_grey"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/finder_button_pressed"
        android:drawableStart="@drawable/icon_that_have"
        android:drawablePadding="16dp"
        android:elevation="10dp"
        android:fontFamily="@font/roboto"
        android:gravity="start|center"
        android:padding="0dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/that_have_button_text"
        android:textAllCaps="false"
        android:textColor="@color/text_grey"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>